--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,4 +1,4 @@
-                                SABnzbd 2.2.0
+                                SABnzbd 2.3.0
 
 -------------------------------------------------------------------------------
 0) LICENSE
@@ -27,39 +27,38 @@ Just run the downloaded EXE file and the installer will start.
 It's just a simple standard installer.
 After installation, find the SABnzbd program in the Start menu and start it.
 
-Within 5-10 seconds your web browser will start and show the user interface.
+Within a few seconds your web browser will start and show the user interface.
 Use the "Help" button in the web-interface to be directed to the Help Wiki.
-
 
 -------------------------------------------------------------------------------
 2) INSTALL pre-built Windows binaries
 -------------------------------------------------------------------------------
 Unzip pre-built version to any folder of your liking.
 Start the SABnzbd.exe program.
-Within 5-10 seconds your web browser will start and show the user interface.
+Within a few seconds your web browser will start and show the user interface.
 Use the "Help" button in the web-interface to be directed to the Help Wiki.
-
 
 -------------------------------------------------------------------------------
 3) INSTALL pre-built macOS binaries
 -------------------------------------------------------------------------------
 Download the DMG file, mount and drag the SABnzbd icon to Programs.
 Just like you do with so many apps.
-Make sure you pick the right folder, depending on your macOS version.
-
 
 -------------------------------------------------------------------------------
 4) INSTALL with only sources
 -------------------------------------------------------------------------------
 
+Specific guides to install from source are available for Windows and macOS:
+    https://sabnzbd.org/wiki/installation/install-macos
+    https://sabnzbd.org/wiki/installation/install-from-source-windows
+
 You need to have Python installed plus some non-standard Python modules
 and a few tools.
 
-Unix/Linux/macOS
+All platforms
     Python-2.7.latest       http://www.python.org (2.7.9+ recommended)
 
 Windows
-    Python-2.7.latest       http://www.python.org (2.7.9+ recommended)
     PyWin32                 use "pip install pypiwin32"
 
 Essential modules
@@ -67,18 +66,17 @@ Essential modules
     par2cmdline >= 0.4      https://github.com/Parchive/par2cmdline/releases
                             See also: https://sabnzbd.org/wiki/installation/multicore-par2
     unrar >= 5.00+          http://www.rarlab.com/rar_add.htm
+    openssl >= 1.0.0        http://www.openssl.org/
 
 Optional modules
     unzip >= 6.00           http://www.info-zip.org/
     7zip >= 9.20            http://www.7zip.org/
     sabyenc == 3.0.2        use "pip install sabyenc"
                             More information: https://sabnzbd.org/sabyenc
-    openssl >= 1.0.0        http://www.openssl.org/
-                            v0.9.8 will work, but limits certificate validation
     cryptography >= 1.0     use "pip install cryptography"
                             Enables certificate generation and detection of encrypted RAR-files
 
-Optional modules Unix/Linux/macOS
+Optional modules Linux
     pynotify                Should be part of GTK for Python support on Debian/Ubuntu
                             If not, you cannot use the NotifyOSD feature.
     python-dbus             Enable option to Shutdown/Restart/Standby PC on queue finish.
@@ -88,6 +86,7 @@ Embedded modules (preferably use the included version)
 
 
 Unpack the ZIP-file containing the SABnzbd sources to any folder of your liking.
+
 If you want multiple languages, you need to compile the translations.
 Start this from a shell terminal (or command prompt):
     python tools/make_mo.py
@@ -95,7 +94,7 @@ Start this from a shell terminal (or command prompt):
 Start this from a shell terminal (or command prompt):
     python SABnzbd.py
 
-Within 5-10 seconds your web browser will start and show the user interface.
+Within a few seconds your web browser will start and show the user interface.
 Use the "Help" button in the web-interface to be directed to the Help Wiki.
 
 
@@ -113,7 +112,7 @@ or
 
 You may of course try other port numbers too.
 
-For troubleshooting you can use the program SABnzbd-console.exe.
+For troubleshooting on Windows you can use the program SABnzbd-console.exe.
 This will show a black window where logging information will be shown. This
 may help you solve problems easier.
 
@@ -121,7 +120,7 @@ may help you solve problems easier.
 6) MORE INFORMATION
 -------------------------------------------------------------------------------
 
-Visit the WIKI site:
+Visit our wiki:
     https://sabnzbd.org/wiki/
 
 
