--- a/README.mkd
+++ b/README.mkd
@@ -1,10 +1,11 @@
-Release Notes - SABnzbd 2.3.0
+Release Notes - SABnzbd 2.3.0 Alpha 1
 =========================================================
 
 ## Changes since 2.2.1
 - Option to limit Servers to specific Categories removed
 - Improved par2 handling and obfuscated files detection
-- Duplicate filenames in NZB's no longer rejected (new installations)
+- Duplicate filenames in NZB's no longer rejected by default
+- Set custom URL instead of /sabnzbd/ (in Config > Specials)
 - Article-state (which servers are tried) is preserved after restart
 - Auto disconnect (if enabled) only after verification of last item
 - Slight performance improvement when fetching RSS-feeds
@@ -12,13 +13,18 @@ Release Notes - SABnzbd 2.3.0
 - URL grabbing can now be individually paused
 - Scheduler can pause/unpause jobs in specific category
 - Series Duplicate Checker can allow PROPER/REAL/REPACK versions
+- Refresh-icon in Glitter when refresh rate is above 2 seconds
 - macOS: Bundled new OpenSSL version with support for TLSv1.2
 - macOS: No longer linked to system certificate store
 - macOS and Windows: Installers include Mozilla CA certificates
 
 ## Bugfixes since 2.2.1
+- Reduce CPU usage with multiple servers
 - Fix yet another potential stalling issue
+- Remove Timeout tracebacks
+- Only warn if number of actual passwords is larger than 30
 - Unexpected behavior when diskspace becomes critically low
+- MacOS: Direct Unpack could hang in case of special charters in names
 - API: Correct listing of downloaded and queued files in get_files
 - API: Jobs with Force priority should always have status 'Downloading'
 
