--- a/README.mkd
+++ b/README.mkd
@@ -1,43 +1,41 @@
-Release Notes - SABnzbd 2.3.1 RC 1
+Release Notes - SABnzbd 2.3.1 RC 2
 =========================================================
 
-## Bugfixes since 2.3.1 Beta 1
-- Changing priorities when jobs were being added could cause freeze
-- Post-processing scripts could fail to run
-- Always send failure_url to post-processing scripts
-- Saving errors of renames-file prevented
-- Downloader could crash during first few seconds
-- Testing email notifications did not function
-- Email notifications could not be limited to categories
-- Show that RSS 'From Show SxxEyy' is an Accept-type filter
-- Category folders cannot be sub-folders of Temporary Download Folder
-- macOS: Added Safari pinned tab icon
-
-In case of 'Article DB missing/empty' errors, enable +Debug logging
-and report here: https://github.com/sabnzbd/sabnzbd/issues/952
-
-
 ## Changes since 2.3.0
-- Added post-processing script Deobfuscate.py ("scripts" folder) which
-  can be used to automatically process "rename.par2" after unpacking
+- Added post-processing script Deobfuscate.py (in "scripts" folder)
+  which can automatically process "rename.par2" after unpacking
   or rename the largest file in the folder to the download name
+- Maximum Article Cache size increased to 4GB on 64 bit systems
 - Paths to par2, unrar, unzip and 7zip are passed to scripts
+- Path to gzipped NZB file of job is now passed to scripts
 - Windows: Single click on tray icon pauses/unpauses queue
 
 ## Bugfixes since 2.3.0
 - Abort Direct Unpack if no progress for 2 minutes after download
 - Added measures to prevent "Failed to import" errors
+- Downloader could crash during first few seconds
+- Saving errors of renames-file prevented
 - Remove ".par2" at end of job name, could cause failure of repair
 - When re-adding a job, the time left was not calculated
 - Priority of category was ignored when adding new job
-- Sorting failed when "Ignore folders inside archives" was enabled
+- Server information in Status window was not updated
+- Always show Direct Unpack status
+- Correctly adapt date and time display to local time zone
+- Category folders cannot be sub-folders of Temporary Download Folder
+- Email notifications could not be limited to categories
+- Testing email notifications did not function
 - Added "with" to list of lowercase words in titles for Sorting
 - "From SxxEyy" RSS filter did not always work
-- Server information in Status window was not updated
-- Correctly adapt date and time display to local time zone
+- Show clearly that RSS "From Show SxxEyy" is an Accept-type filter
+- Sorting failed when "Ignore folders inside archives" was enabled
+- Always send failure_url to post-processing scripts
 - Windows: Special filenames could cause failures during unpack
 - Windows: Message box is shown in case of fatal startup error
 - Windows: Unpacking to network shares could fail
+- macOS: Added Safari pinned tab icon
+
+In case of "Article DB missing/empty" errors, enable +Debug logging
+and report here: https://github.com/sabnzbd/sabnzbd/issues/952
 
 ## Upgrading from 2.2.x and older
 - Finish queue
@@ -46,7 +44,7 @@ and report here: https://github.com/sabnzbd/sabnzbd/issues/952
 - Start SABnzbd
 
 ## Upgrade notices
-- When upgrading from 2.1.0 or older the queue will be converted. Job order,
+- When upgrading from 2.2.0 or older the queue will be converted. Job order,
   settings and data will be preserved, but all jobs will be unpaused and
   URL's that did not finish fetching before the upgrade will be lost.
 - The organization of the download queue is different from 0.7.x releases.
