Correctly update text files for 2.3.2RC2
Typo!

--- a/README.mkd
+++ b/README.mkd
@@ -8,7 +8,8 @@ Release Notes - SABnzbd 2.3.2 RC 2
 - Added option '%dn' to Date Sorting to rename files as job name
 - Added 'Job Name as Folder Name' as Sorting Preset for de-obfuscation
 - Add per-day download-statistics to 'server_stats' API-call
-- Pre-queue scripts could fail to run
+- Having 'Download all par2' enabled would result in disappearing jobs
+- Pre-queue scripts would fail to run
 
 ## Changes since 2.3.1
 - SABYenc updated to 3.3.2 to fix rare crash during downloading
