--- a/README.mkd
+++ b/README.mkd
@@ -1,34 +1,34 @@
-Release Notes - SABnzbd 2.3.2 RC 2
+Release Notes - SABnzbd 2.3.2
 =========================================================
-
-## Changes since 2.3.2 RC 1
-- Simplify Config pages by hiding Advanced Settings
-- Automatically set Article Cache to 25% of system memory (max. 1GB)
-- Added Hebrew date-time texts
-- Added option '%dn' to Date Sorting to rename files as job name
-- Added 'Job Name as Folder Name' as Sorting Preset for de-obfuscation
-- Add per-day download-statistics to 'server_stats' API-call
-- Having 'Download all par2' enabled would result in disappearing jobs
-- Pre-queue scripts would fail to run
 
 ## Changes since 2.3.1
 - SABYenc updated to 3.3.2 to fix rare crash during downloading
 - Minor updates of SABYenc (such as 3.3.2) are no longer mandatory
+- Article Cache is automatically set to 25% of system memory, if no
+  custom value was set. Maximum set by auto-detect is 1GB
+- Simplify Config pages by hiding Advanced Settings
+- Added option '%dn' to Date Sorting to rename files as job name
+- Added 'Job Name as Folder Name' as Sorting Preset for de-obfuscation
 - Server usage graphs are now linked to make comparing servers easier
-- First article of each file is downloaded first to identify filenames
-- Jobs finished by Direct Unpack will be post-processed first
 - URLs that fail to fetch due to server errors will only be retried 10x
 - Delay between URL retries increases when not specified by server
-- Job password entered by user is always shown in History
+- First article of each file is downloaded first to identify filenames
+- Jobs finished by Direct Unpack will be post-processed first
 - If available, 7zip will be used instead of unzip
+- Job password entered by user is always shown in History
+- Password is also extracted from filename in case of custom job name
+- Add per-day download-statistics to 'server_stats' API-call
+- Added Hebrew date-time texts
 
 ## Bugfixes since 2.3.1
 - Dropped connections could result in stalled downloads
+- Pre-queue scripts would fail to run
 - Pre-queue script output was not always parsed correctly
-- Notifications were always send for 'Default' category
+- Notifications were always sent for 'Default' category
 - 'History Retention' also checked on start of program
-- macOS: Restore compatibility with macOS 10.11.6 on some systems
+- macOS: Restore full compatibility with macOS 10.11
 - Windows: Unpacking could fail due to paths not being quoted
+- Windows: All input parameters to scripts are now quoted
 - Windows: Complete folder in root of drive could crash post-processing
 - Windows: Automatically correct 'Extra Par2 Parameters' for MultiPar
 - Windows: Prevent potential pause/unpause loop after tray icon click
